# local-apt

./: README.md  requirements.txt  setup.cfg  setup.py
local_apt/: cli.py
