[metadata]
name = local-apt
author = Kevin Roy
author-email = kiniou@gmail.com
summary = a dead simple debian apt repository builder
description-file = README.md
home-page =
license =
classifier =
keywords =

[files]
packages = local_apt


[entry_points]
console_scripts =
  local-apt = local_apt.cli:main